tests/tooling/fixtures/native/execution/positive/conditional_nested_select.objc3
module ConditionalNestedSelectExec;

fn main() -> i32 {
  let a = 0;
  let out = (a < 1) ? ((a == 0) ? 7 : 8) : 9;
  return out;
}
