tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_pure_fn_extern.objc3
module MisplacedQualifierPureFnExtern;

pure fn extern add(lhs: i32, rhs: i32) -> i32;

fn main() -> i32 {
  return 0;
}
